# xdna-driver

./: CMakeLists.txt
src/: CMakeLists.txt
src/driver/amdxdna/: aie2_ctx.c  amdxdna_gem.c
src/shim/virtio/: drm_hw.h  platform_virtio.cpp
src/vxdna/: CMakeLists.txt  COPYING.MIT  LICENSE  README.md
src/vxdna/example/: callbacks_example.c  capset_example.c  ccmd_process_example.c  example.c
src/vxdna/include/: vaccel_renderer.h
src/vxdna/src/: vaccel_amdxdna.cpp  vaccel_amdxdna.h  vaccel_capset.cpp  vaccel_context.cpp  vaccel_drm_backend.cpp  vaccel_error.h  vaccel_fence.cpp  vaccel_internal.h  vaccel_manager.cpp  vaccel_resource.cpp
src/vxdna/tests/: CMakeLists.txt  INTEGRATION.md  QUICKSTART.md  README.md  run_tests.sh  test_helper.cpp  test_helper.h  test_vaccel_renderer.cpp
src/vxdna/util/: README.md  os_file.c  os_file.h  vxdna_debug.cpp  vxdna_debug.h  xvdna_debug.c  xvdna_debug.h
tools/: amdxdna_deps.sh
